fixed clipping issue on about me page

--- a/client/src/components/About.css
+++ b/client/src/components/About.css
@@ -8,6 +8,7 @@
     justify-content: center;
     margin-left: 10%;
     margin-right: 10%;
+    padding-bottom: 50px;
 }
 
 .row2 {
